--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <body>
   <div id="app"></div>
   <script src="dist/app.bundle.js"></script>
+  <!-- <script src="src/index.js"></script> -->
 </body>
 </html>
